Style and Contact Links
- Updated contact links on main page
- Updated P and Header styles

--- a/index.html
+++ b/index.html
@@ -99,16 +99,18 @@
                   <div class="p-5">
                     <h2 class="mb-5">Hey! I'm Cameron Bowler</h2>
                     <p>I'm an aspiring full-stack web developer, living in Victoria, BC. A father of a beautiful 2yr old boy and a Boston Terrier with endless energy. My passion is creating useful applications to make life a little easier :)</p>
-                    <p><a href="#">Checkout my resume</a></p>
                     <ul class="ftco-footer-social list-unstyled mt-4">
                       <li><a href="https://www.linkedin.com/in/cameron-bowler-86930392/" target="_blank"><span class="icon-linkedin"></span></a></li>
                       <li><a href="https://www.facebook.com/CameronBowler84/?modal=admin_todo_tour" target="_blank"><span class="icon-facebook"></span></a></li>
                       <li><a href="https://github.com/bowler2u" target="_blank"><span class="icon-github"></span></a></li>
                     </ul>
-                    <h5>Contact me here!</h5>
-                    <p>Phone: <a href="tel:1-250-516-8257">(250)516-8257</a></p>
-                  <p>Email: <a href="mailto:cameron@smallworldwebdevelopment.com">cameron@CaBoWeb.com</a>
                   </div>
+                </div>
+                <div class="contactSpot">
+                <h5>Contact me here!</h5>
+										<p>Phone: <a href="tel:1-250-516-8257">(250)516-8257</a></p>
+                  <p>Email: <a href="mailto:cameron@smallworldwebdevelopment.com" target="_blank">cameron@CaBoWeb.com</a>
+                  <p>Resume: <a href="/CaBoWeb/about.html">See my resume</a></p>
                 </div>
               </div>
             </div>
