--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <h5>Contact me here!</h5>
 									<p>Phone: <a href="tel:1-250-516-8257">(250)516-8257</a></p>
                   <p>Email: <a href="mailto:cameron@smallworldwebdevelopment.com" target="_blank">cameron@CaBoWeb.com</a>
-                  <p>Resume: <a href="/CaBoWeb/about.html">See my resume</a></p>
+                  <p>Resume: <a href="/about.html">See my resume</a></p>
                 </div>
               </div>
             </div>
