Content/Style Updates

--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
         <div class="col-md-11">
           <div class="profile ftco-animate">
             <h2 class="mb-4">Profile</h2>
-            <h4 class="mb-4">I'm a Full Stack Developer &amp; Frontend Designer from Victoria, BC. I aim to make a difference through my simple, fun and useful applications</h4>
+            <h4 class="mb-4">I'm a Full Stack Developer &amp; Frontend Designer from Victoria, BC.<br> I aim to make a difference through my simple, fun and useful applications</h4>
             <div class="row my-5">
               <div class="col-md-6">
                 <p><strong>Name:</strong> <span>Cameron Bowler</span></p>
@@ -123,7 +123,7 @@
             </div>
             <div class="exp-wrap py-4">
               <div class="desc">
-                <h4>Diploma of Trades in Industrial Electricity <span> - British Columbia Institute of Technology</span> </h4>
+                <h4>Diploma of Trades in Industrial Electricity <span> - BCIT</span> </h4>
                 <p class="location">Vancouver - BC</p>
               </div>
               <div class="year">
@@ -197,7 +197,7 @@
             <h4>CSS3</h4>
             <div class="progress">
               <div class="progress-bar color-1" role="progressbar" aria-valuenow="90"
-                aria-valuemin="0" aria-valuemax="100" style="width:85%">
+                aria-valuemin="0" aria-valuemax="100" style="width:90%">
                 <span>90%</span>
               </div>
             </div>
